--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -28,6 +28,13 @@ jobs:
       with:
         node-version: lts/*
 
+     # Кешируем папку с модулями
+    - name: Cache NPM modules
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      
       # Устанавливаем зависимости
     - name: Install dependencies
       run: npm ci
