--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HOST: 0.0.0.0
-      API_URL: ${{ secrets.API_URL }}
+      BASE_URL: ${{ secrets.BASE_URL }}
     steps:
       # Получаем код
     - uses: actions/checkout@v4
