--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "reportClassic": "npx allure classic ./allure-results --single-file",
     "report": "npx allure report --clean --open",
     "open allure report": "allure serve allure-results",
-    "codegen": "npx playwright codegen http://localhost:4200/"
+    "codegen": "npx playwright codegen https://8f7a-46-36-217-190.ngrok-free.app"
   },
   "repository": {
     "type": "git",
