--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HOST: 0.0.0.0
+      BASE_URL: ${{ secrets.BASE_URL }} 
     steps:
       # Получаем код
     - uses: actions/checkout@v4
@@ -27,53 +28,26 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+      
+      # Устанавливаем зависимости
+    - name: Install dependencies
+      run: npm ci
 
-      # Сборка прод-версии Angular
-    - run: npm run build -- --configuration=production
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
 
-      # Поднимаем локальный веб-сервер (HTTP, но на 0.0.0.0)
-    - name: Serve dist on 4200
-      run: |
-        npx http-server ./dist/<project-name> -a 0.0.0.0 -p 4200 &        
-        echo $! > web.pid
+      # 1. Ждём готовности сервера (если нужно)
+    - name: Wait for server to be ready
+      run: npx wait-on "${{ env.BASE_URL }}"
 
-      # Ставим и запускаем ngrok ➜ HTTPS-туннель
-    - name: Start ngrok tunnel
-      env:
-        NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}   # ⚠️ Добавьте в Secrets!
-      run: |
-        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | \
-          sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-        echo "deb https://ngrok-agent.s3.amazonaws.com stable main" | \
-          sudo tee /etc/apt/sources.list.d/ngrok.list
-        sudo apt update -qq && sudo apt install -y ngrok
-        ngrok config add-authtoken "$NGROK_TOKEN"
-        # --host-header=rewrite чинит «Invalid Host header»
-        ngrok http --log=stdout --host-header=rewrite 4200 > ngrok.log &
-        echo $! > ngrok.pid
-
-      # Ждём, пока ngrok отдаст public_url и кладём его в переменную
-    - name: Extract ngrok HTTPS URL
-      id: get-url
-      run: |
-        sudo apt-get -y install jq
-
-      # ждём, пока появится HTTPS-туннель
-      until curl -s http://127.0.0.1:4040/api/tunnels \
-            | jq -e '.tunnels[] | select(.proto=="https") | .public_url' >/dev/null; do
-        sleep 2
-      done
-
-      # сохраняем публичный URL в переменную
-      NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels \
-              | jq -r '.tunnels[] | select(.proto=="https") | .public_url')
-
-      echo "url=$NGROK_URL" >> $GITHUB_OUTPUT
-
-      # Запускаем Playwright
-    - name: Run Playwright tests against HTTPS
-      env:
-        BASE_URL: ${{ steps.get-url.outputs.url }}
+      # 2. Получаем публичный IP раннера
+    - name: Get runner public IP
+      run: 
+        echo "Runner public IP:"
+        curl -s https://api.ipify.org
+      
+      # Запускаем тесты
+    - name: Run Playwright tests
       run: npx playwright test
 
       # Сохраняем отчет Playwright
