--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -16,9 +16,8 @@ permissions:
 
 jobs:
   testE2E:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
-      HOST: 0.0.0.0
       BASE_URL: ${{ secrets.BASE_URL }} 
     steps:
       # Получаем код
@@ -35,16 +34,6 @@ jobs:
 
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-
-      # 1. Ждём готовности сервера (если нужно)
-    - name: Wait for server to be ready
-      run: npx wait-on "${{ env.BASE_URL }}"
-
-      # 2. Получаем публичный IP раннера
-    - name: Get runner public IP
-      run: 
-        echo "Runner public IP:"
-        curl -s https://api.ipify.org
       
       # Запускаем тесты
     - name: Run Playwright tests
