--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   testE2E:
-    runs-on: [self-hosted, linux]
+    runs-on: [ self-hosted, ARM64 ]
     env:
       BASE_URL: ${{ secrets.BASE_URL }} 
     steps:
@@ -37,7 +37,7 @@ jobs:
       
       # Запускаем тесты
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright test --reporter=list,allure-playwright
 
       # Сохраняем отчет Playwright
     - uses: actions/upload-artifact@v4
