--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -17,11 +17,24 @@ permissions:
 jobs:
   testE2E:
     runs-on: [ self-hosted, ARM64 ]
-    env:
-      BASE_URL: ${{ secrets.BASE_URL }} 
     steps:
-      # Получаем код
+    # 1) Чекаутим репозиторий
     - uses: actions/checkout@v4
+
+    # 2) Настраиваем эмуляцию ARM (QEMU)
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    # 3) Поднимаем Docker Buildx
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    # 4) Собираем нужный образ (или ваш action)
+    - name: Build with Buildx
+      uses: docker/build-push-action@v3
+      with:
+        push: false
+        tags: my-image:latest
 
       # Устанавливаем Node.js
     - uses: actions/setup-node@v4
@@ -66,15 +79,18 @@ jobs:
         path: gh-pages
 
       # Создаем Allure отчёт
-    - uses: simple-elf/allure-report-action@master
+    - name: Generate Allure Report
       if: always()
-      id: allure-report
+      run: |
+        npm install -g allure-commandline@2.x
+        allure generate test-results/allure-results --clean -o allure-report
+
+    - name: Upload Allure HTML report
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
-        allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
-        keep_reports: 30
+        name: allure-report
+        path: allure-report
 
       # Деплоим отчет
     - name: Deploy report
