--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -34,11 +34,13 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     # 4) Собираем нужный образ (или ваш action)
-    - name: Build with Buildx
+    - name: Build self-hosted runner image
       uses: docker/build-push-action@v3
       with:
-        push: false
-        tags: my-image:latest
+        context: .runner
+        file:    .runner/Dockerfile
+        push:    false
+        tags:    gh-self-hosted-runner:amd64
 
       # Устанавливаем Node.js
     - uses: actions/setup-node@v4
