--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -17,6 +17,8 @@ permissions:
 jobs:
   testE2E:
     runs-on: [ self-hosted, ARM64 ]
+    env:
+      BASE_URL: ${{ secrets.BASE_URL }}
     steps:
     # 1) Чекаутим репозиторий
     - uses: actions/checkout@v4
@@ -33,10 +35,12 @@ jobs:
     - name: Build self-hosted runner image
       uses: docker/build-push-action@v3
       with:
-        context: .runner
-        file:    .runner/Dockerfile
-        push:    false
-        tags:    gh-self-hosted-runner:amd64
+        context:    .runner
+        file:       .runner/Dockerfile
+        push:       false
+        tags:       gh-self-hosted-runner:amd64
+        cache-from: type=gha
+        cache-to:   type=gha,mode=max
 
       # Устанавливаем Node.js
     - uses: actions/setup-node@v4
@@ -59,8 +63,8 @@ jobs:
       if: always()
       continue-on-error: true
       with:
-        name: test-results
-        path: test-results
+        name: test-results/output
+        path: test-results/output
         retention-days: 30
 
       # Сохраняем отчет Allure
