--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -1,114 +1,112 @@
-# название workflow
 name: Playwright tests working web-service
 
 on:
-# стандартный запуск 
   push:
     branches: [ test-branch ]
   pull_request:
     branches: [ main ]
-# ручной запуск
   workflow_dispatch:
 
 permissions:
   contents: write
-  pages:   write
+  pages: write
+  packages: write
 
 jobs:
-  testE2E:
+  build_runner:
+    timeout-minutes: 30
     runs-on: [ self-hosted, ARM64 ]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and load runner image
+        uses: docker/build-push-action@v4
+        with:
+          context: .runner
+          file: .runner/Dockerfile
+          push: false
+          load: true
+          tags: self-hosted-runner:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
+  testE2E:
+    timeout-minutes: 30
+    needs: build_runner
+    runs-on: [ self-hosted, ARM64 ]
+    container:
+      image: self-hosted-runner:latest
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
     steps:
-    # 1) Чекаутим репозиторий
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    # 2) Даем права на Docker-сокет
-    - name: Grant permissions to Docker socket
-      run: sudo chmod 666 /var/run/docker.sock
+      - name: Grant Docker socket permissions
+        run: sudo chmod 666 /var/run/docker.sock
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
-    - name: Build self-hosted runner image with registry cache
-      uses: docker/build-push-action@v3
-      with:
-        context:    .runner
-        file:       .runner/Dockerfile
-        push:       false
-        tags:       ghcr.io/kseniyari/self-hosted-runner:cache
-        cache-from: type=registry,ref=ghcr.io/kseniyari/self-hosted-runner:cache
-        cache-to:   type=registry,ref=ghcr.io/kseniyari/self-hosted-runner:cache,mode=max
+      - name: Install dependencies
+        run: npm ci
 
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-      # Устанавливаем Node.js
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-      
-      # Устанавливаем зависимости
-    - name: Install dependencies
-      run: npm ci
+      - name: Run Playwright tests
+        run: npx playwright test \
+            --reporter=list \
+            --reporter=junit \
+            --reporter=allure-playwright
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-      
-      # Запускаем тесты
-    - name: Run Playwright tests
-      run: npx playwright test --reporter=list,allure-playwright
+      - name: Upload Playwright test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        continue-on-error: true
+        with:
+          name: test-results
+          path: test-results
+          retention-days: 30
 
-      # Сохраняем отчет Playwright
-    - uses: actions/upload-artifact@v4
-      if: always()
-      continue-on-error: true
-      with:
-        name: test-results/output
-        path: test-results/output
-        retention-days: 30
+      - name: Upload Allure results
+        uses: actions/upload-artifact@v4
+        if: always()
+        continue-on-error: true
+        with:
+          name: allure-results
+          path: allure-results
+          retention-days: 30
 
-      # Сохраняем отчет Allure
-    - uses: actions/upload-artifact@v4
-      if: always()
-      continue-on-error: true
-      with:
-        name: allure-results
-        path: allure-results
-        retention-days: 30
+      - name: Generate Allure Report
+        if: always()
+        run: |
+          npm install -g allure-commandline@2.x
+          allure generate allure-results --clean -o allure-report
 
-      # Забираем результаты предыдущего запуска
-    - uses: actions/checkout@v4
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+      - name: Upload Allure HTML report
+        uses: actions/upload-artifact@v4
+        if: always()
+        continue-on-error: true
+        with:
+          name: allure-report
+          path: allure-report
 
-      # Создаем Allure отчёт
-    - name: Generate Allure Report
-      if: always()
-      run: |
-        npm install -g allure-commandline@2.x
-        allure generate test-results/allure-results --clean -o allure-report
-
-    - name: Upload Allure HTML report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-report
-        path: allure-report
-
-      # Деплоим отчет
-    - name: Deploy report
-      if: always()
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: gh-pages
-        publish_dir: ./allure-report
+      - name: Deploy report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        if: always()
+        continue-on-error: true
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
