--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -39,7 +39,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
+        run: npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright --output=test-results
 
       - name: Upload Playwright test results
         uses: actions/upload-artifact@v4
@@ -49,7 +49,7 @@ jobs:
           name: test-results
           path: test-results
           retention-days: 30
-          
+
       - name: Upload Allure results
         uses: actions/upload-artifact@v4
         if: always()
