--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -1,94 +1,91 @@
 name: Playwright tests working web-service
 on:
   push:
-    branches: [ test-branch ]  # Запускать при push в ветку test-branch
+    branches: [ test-branch ]
   pull_request:
-    branches: [ main ]         # Запускать при pull request в ветку main
-  workflow_dispatch:           # Разрешить ручной запуск из интерфейса GitHub
+    branches: [ main ]
+  workflow_dispatch:
 permissions:
-  contents: write              # Разрешение на запись содержимого репозитория
-  pages: write                 # Разрешение на публикацию GitHub Pages
-  packages: write              # Разрешение на публикацию пакетов
+  contents: write
+  pages: write
+  packages: write
 jobs:
   testE2E:
-    timeout-minutes: 30        # Ограничение времени выполнения задачи
-    runs-on: [ self-hosted, ARM64 ]  # Запускать на self-hosted раннере с ARM64 архитектурой
+    timeout-minutes: 30
+    runs-on: [ self-hosted, ARM64 ]
     env:
-      # Подключение всех необходимых секретов из GitHub Secrets для тестов
       BASE_URL: ${{ secrets.BASE_URL }}
       KEYCLOAK_URL: ${{ secrets.KEYCLOAK_URL }}
       CLIENT_CODE: ${{ secrets.CLIENT_CODE }}
       USERNAME: ${{ secrets.USERNAME }}
       PASSWORD: ${{ secrets.PASSWORD }}
-      ALLURE_TESTOPS_TOKEN: ${{ secrets.ALLURE_TESTOPS_TOKEN }}  # Токен для Allure TestOps
+      ALLURE_TESTOPS_TOKEN: ${{ secrets.ALLURE_TESTOPS_TOKEN }}
     steps:
-      - uses: actions/checkout@v4  # Шаг 1: Клонирование репозитория
+      - uses: actions/checkout@v4
       
-      - name: Grant Docker socket permissions  # Шаг 2: Предоставление прав для Docker
+      - name: Grant Docker socket permissions
         run: sudo chmod 666 /var/run/docker.sock
         
-      - name: Set up JDK 11  # Шаг 3: Установка Java - необходима для Allure
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Выбор дистрибутива Java (Eclipse Temurin)
-          java-version: '11'       # Версия Java
+          distribution: 'temurin'
+          java-version: '11'
           
-      - uses: actions/setup-node@v4  # Шаг 4: Установка Node.js
+      - uses: actions/setup-node@v4
         with:
-          node-version: lts/*  # Использование последней LTS версии Node.js
+          node-version: lts/*
           
-      - uses: actions/cache@v3  # Шаг 5: Кэширование npm-зависимостей для ускорения
+      - uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
             
-      - name: Install dependencies  # Шаг 6: Установка зависимостей проекта
+      - name: Install dependencies
         run: npm ci
         
-      - name: Install Playwright Browsers  # Шаг 7: Установка браузеров для Playwright
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      
+      # Добавление шага с allurectl для TestOps
+      - name: Set up allurectl
+        uses: allure-framework/setup-allurectl@v1
+        with:
+          allure-endpoint: https://r1995k.testops.cloud/api
+          allure-token: ${{ secrets.ALLURE_TESTOPS_TOKEN }}
+          allure-project-id: 1
         
-      - name: Run Playwright tests  # Шаг 8: Запуск тестов с репортерами
-        run: npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
+      - name: Run Playwright tests with allurectl
+        run: |
+          allurectl watch -- npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
+        env:
+          ALLURE_RESULTS: allure-results
         
-      - name: Upload Playwright test results  # Шаг 9: Загрузка результатов тестов как артефакт
+      - name: Upload Playwright test results
         uses: actions/upload-artifact@v4
-        if: always()  # Выполнять даже при ошибках в предыдущих шагах
-        continue-on-error: true  # Продолжать выполнение даже при ошибке на этом шаге
+        if: always()
+        continue-on-error: true
         with:
           name: test-results
-          path: test-results/trace/  # Путь к результатам тестов
-          retention-days: 30  # Хранить артефакты 30 дней
+          path: test-results/trace/
+          retention-days: 30
           
-      - name: Upload Allure results  # Шаг 10: Загрузка Allure-результатов как артефакт
+      - name: Upload Allure results
         uses: actions/upload-artifact@v4
         if: always()
         continue-on-error: true
         with:
           name: allure-results
-          path: allure-results  # Путь к Allure-результатам
+          path: allure-results
           retention-days: 30
           
-      - name: Upload results to Allure TestOps
-        if: always()
-        continue-on-error: true
-        run: |
-          # Установка Allure CLI с параметром --force для предотвращения ошибок
-          npm install -g allure-commandline@2.x --force
-          # Отправка результатов в Allure TestOps через API
-          allure testops upload \
-            --endpoint ${{ secrets.ALLURE_TESTOPS_ENDPOINT }} \
-            --project-id ${{ secrets.ALLURE_TESTOPS_PROJECT_ID }} \
-            --token ${{ secrets.ALLURE_TESTOPS_TOKEN }} \
-            allure-results
-      
-      - name: Generate Allure Report  # Шаг 12: Генерация HTML-отчета Allure
+      - name: Generate Allure Report
         if: always()
         run: |
           npm install -g allure-commandline@2.x --force
-          allure generate allure-results --clean -o allure-report  # Создание HTML-отчета
+          allure generate allure-results --clean -o allure-report
           
       - name: Send Telegram Notifications
         if: always()
@@ -119,26 +116,26 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT: ${{ secrets.TELEGRAM_CHAT }}
           
-      - name: Upload Allure HTML report  # Шаг 14: Загрузка HTML-отчета как артефакт
+      - name: Upload Allure HTML report
         uses: actions/upload-artifact@v4
         if: always()
         continue-on-error: true
         with:
           name: allure-report
-          path: allure-report  # Путь к сгенерированному отчету
+          path: allure-report
           retention-days: 30
           
-      - name: Deploy report to GitHub Pages  # Шаг 15: Публикация отчета на GitHub Pages
+      - name: Deploy report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: always()
         continue-on-error: true
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Токен для доступа к GitHub API
-          publish_branch: gh-pages  # Ветка для публикации Pages
-          publish_dir: ./allure-report  # Директория с отчетом для публикации
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
           
-      - name: Output TestOps URL  # Шаг 16: Просто выводим ссылку на Allure TestOps
+      - name: Output TestOps URL
         if: always()
         continue-on-error: true
         run: |
-          echo "Allure TestOps project: ${{ secrets.ALLURE_TESTOPS_URL }}/project/${{ secrets.ALLURE_TESTOPS_PROJECT_ID }}"
+          echo "Allure TestOps project: https://r1995k.testops.cloud/project/1"
