--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -5,13 +5,7 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-    inputs:
-      ALLURE_JOB_RUN_ID:
-        description: 'ALLURE_JOB_RUN_ID service parameter. Leave blank.'
-        required: false
-      ALLURE_USERNAME:
-        description: 'ALLURE_USERNAME service parameter. Leave blank.'
-        required: false
+
 permissions:
   contents: write
   pages: write
@@ -26,12 +20,7 @@ jobs:
       CLIENT_CODE: ${{ secrets.CLIENT_CODE }}
       USERNAME: ${{ secrets.USERNAME }}
       PASSWORD: ${{ secrets.PASSWORD }}
-      ALLURE_TOKEN: ${{ secrets.ALLURE_TESTOPS_TOKEN }}
-      ALLURE_ENDPOINT: https://r1995k.testops.cloud/api
-      ALLURE_PROJECT_ID: 1
-      ALLURE_RESULTS: allure-results
-      ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
-      
+
     steps:
       - uses: actions/checkout@v4
       
@@ -60,27 +49,10 @@ jobs:
         
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      
-      # Используем более надежный способ установки allurectl
-      - name: Install allurectl
-        run: |
-          curl -OL https://github.com/allure-framework/allurectl/releases/latest/download/allurectl_linux_arm64
-          chmod +x allurectl_linux_arm64
-          sudo mv allurectl_linux_arm64 /usr/local/bin/allurectl
-          allurectl --version
         
-      # Добавляем явную проверку параметров allurectl
-      - name: Verify allurectl configuration
+      - name: Run Playwright tests
         run: |
-          echo "ALLURE_ENDPOINT: $ALLURE_ENDPOINT"
-          echo "ALLURE_PROJECT_ID: $ALLURE_PROJECT_ID"
-          echo "Token is set: ${{ secrets.ALLURE_TESTOPS_TOKEN != '' }}"
-        
-      # Запускаем тесты с опцией --insecure, чтобы избежать проблем с SSL
-      - name: Run Playwright tests with allurectl
-        run: |
-          mkdir -p $ALLURE_RESULTS
-          allurectl --insecure watch -- npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
+          npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
         
       - name: Upload Playwright test results
         uses: actions/upload-artifact@v4
@@ -88,7 +60,7 @@ jobs:
         continue-on-error: true
         with:
           name: test-results
-          path: test-results/trace/
+          path: test-results
           retention-days: 30
           
       - name: Upload Allure results
@@ -99,22 +71,6 @@ jobs:
           name: allure-results
           path: allure-results
           retention-days: 30
-      
-      # Добавляем запасной вариант отправки результатов, если allurectl failed
-      - name: Upload to TestOps with curl (backup)
-        if: always()
-        continue-on-error: true
-        run: |
-          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
-            cd allure-results
-            zip -r ../allure-results.zip .
-            cd ..
-            curl -X POST "$ALLURE_ENDPOINT/upload/project/$ALLURE_PROJECT_ID" \
-              -H "Authorization: Bearer $ALLURE_TOKEN" \
-              -F "allureResults=@allure-results.zip"
-          else
-            echo "No allure results found"
-          fi
           
       - name: Generate Allure Report
         if: always()
@@ -122,7 +78,38 @@ jobs:
           npm install -g allure-commandline@2.x --force
           allure generate allure-results --clean -o allure-report
           
-      - name: Send Telegram Notifications
+      - name: Download Allure Notifications
+        if: always()
+        continue-on-error: true
+        run: |
+          # Создаем директорию для уведомлений
+          mkdir -p notifications
+          
+          # Скачиваем jar-файл для отправки уведомлений
+          curl -o notifications/allure-notifications-4.9.0.jar -L https://github.com/qa-guru/allure-notifications/releases/download/4.9.0/allure-notifications-4.9.0.jar
+          
+          # Создаем файл конфигурации для Telegram
+          cat > notifications/telegram.json << 'EOL'
+          {
+            "base": {
+              "project": "QA.GURU_diplom",
+              "environment": "Production",
+              "comment": "Playwright Test Results",
+              "reportLink": "${reportLink}",
+              "language": "ru",
+              "messenger": "telegram",
+              "allureFolder": "allure-report/",
+              "enableChart": true
+            },
+            "telegram": {
+              "token": "${TELEGRAM_TOKEN}",
+              "chat": "${TELEGRAM_CHAT}",
+              "replyTo": ""
+            }
+          }
+          EOL
+          
+      - name: Create Notification Templates
         if: always()
         continue-on-error: true
         run: |
@@ -135,7 +122,7 @@ jobs:
           EOL
           
           # Создаем telegram.ftl с импортом commons.ftl
-          cat > notifications/templates/telegram.ftl << 'EOL'
+          cat > notifications/templates/commons.ftl << 'EOL'
           <#import "commons.ftl" as commons>
           {
             "message": "<b>${report.name}</b>\n\n<b>Environment:</b> ${report.environment}\n<b>Comment:</b> ${report.comment}\n<b>Duration:</b> <#if report.time??>${report.time.duration}</#if>\n\n<a href='${report.url}'>Отчет на GitHub Pages</a>",
@@ -143,8 +130,12 @@ jobs:
           }
           EOL
           
-          # Запускаем отправку уведомлений, используя существующий telegram.json
-          java "-DconfigFile=notifications/telegram.json" \
+      - name: Send Telegram Notifications
+        if: always()
+        continue-on-error: true
+        run: |
+          # Запускаем отправку уведомлений
+          java "-DconfigFile=notifications/commons.json" \
             "-Dbase.reportLink=https://kseniayari.github.io/QA.GURU_diplom/" \
             -jar notifications/allure-notifications-4.9.0.jar
         env:
@@ -168,9 +159,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./allure-report
-          
-      - name: Output TestOps URL
-        if: always()
-        continue-on-error: true
-        run: |
-          echo "Allure TestOps project: https://r1995k.testops.cloud/project/1"
