--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -10,10 +10,13 @@ permissions:
   contents: write
   pages: write
   packages: write
+  
 jobs:
   testE2E:
     timeout-minutes: 30
     runs-on: [ self-hosted, ARM64 ]
+    
+    # Определение переменных окружения из секретов GitHub
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
       KEYCLOAK_URL: ${{ secrets.KEYCLOAK_URL }}
@@ -25,23 +28,28 @@ jobs:
       ALLURE_TESTOPS_TOKEN: ${{ secrets.ALLURE_TESTOPS_TOKEN }}
       ALLURE_TESTOPS_ENDPOINT: ${{ secrets.ALLURE_TESTOPS_ENDPOINT }} 
       ALLURE_TESTOPS_PROJECT_ID: ${{ secrets.ALLURE_TESTOPS_PROJECT_ID }}
-
+    
     steps:
+      # Клонирование репозитория
       - uses: actions/checkout@v4
       
+      # Настройка доступа к Docker-сокету
       - name: Grant Docker socket permissions
         run: sudo chmod 666 /var/run/docker.sock
         
+      # Установка Java для запуска Allure и других Java-инструментов
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
           
+      # Установка Node.js для запуска Playwright тестов
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
           
+      # Кэширование npm-зависимостей для ускорения последующих сборок
       - uses: actions/cache@v3
         with:
           path: ~/.npm
@@ -49,22 +57,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-
             
+      # Установка зависимостей проекта
       - name: Install dependencies
         run: npm ci
         
+      # Установка браузеров для Playwright
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-
+        
+      # Очистка предыдущих результатов Allure
       - name: Clean previous Allure results
         run: |
           rm -rf allure-results || true
           mkdir -p allure-results
         
+      # Запуск Playwright тестов с генерацией отчетов в разных форматах
       - name: Run Playwright tests
         run: |
           npx playwright test specs/ --reporter=list --reporter=junit --reporter=allure-playwright
-
-      # Установка и запуск allurectl для загрузки результатов
+          
+      # Установка инструмента allurectl для взаимодействия с Allure TestOps
       - name: Install allurectl
         if: always()
         run: |
@@ -72,6 +84,7 @@ jobs:
           chmod +x allurectl
           sudo mv allurectl /usr/local/bin/
           
+      # Загрузка результатов тестов в Allure TestOps
       - name: Upload results to Allure TestOps
         if: always()
         run: |
@@ -81,6 +94,7 @@ jobs:
             --token ${{ secrets.ALLURE_TESTOPS_TOKEN }} \
             --launch-name "GitHub Run #${{ github.run_number }}"
         
+      # Сохранение результатов тестов как артефакт сборки
       - uses: actions/upload-artifact@v4
         if: always()
         continue-on-error: true
@@ -89,6 +103,7 @@ jobs:
           path: test-results
           retention-days: 20
           
+      # Сохранение Allure-результатов как артефакт сборки
       - name: Upload Allure results
         uses: actions/upload-artifact@v4
         if: always()
@@ -98,12 +113,14 @@ jobs:
           path: allure-results
           retention-days: 30
           
+      # Генерация HTML-отчета Allure из результатов тестов
       - name: Generate Allure Report
         if: always()
         run: |
           npm install -g allure-commandline@2.x --force
           allure generate allure-results --clean -o allure-report
           
+      # Настройка конфигурации для отправки уведомлений в Telegram
       - name: Setup Telegram Configuration
         if: always()
         continue-on-error: true
@@ -120,14 +137,13 @@ jobs:
             "base": {
               "logo": "",
               "project": "QA.GURU_diplom",
-              "environment": "GitHub Actions",
-              "comment": "some comment",
+              "environment": "Chrome Browser, Windows, 1440*900",
+              "comment": "Тесты завершены",
               "reportLink": "https://kseniayari.github.io/QA.GURU_diplom/",
               "language": "ru",
               "allureFolder": "allure-report",
               "enableChart": true,
               "enableSuitesPublishing": false,
-              "customData": {}
             },
             "telegram": {
               "token": "$TELEGRAM_TOKEN",
@@ -148,6 +164,7 @@ jobs:
           }
           EOL
           
+      # Отправка уведомлений в Telegram о результатах тестов
       - name: Send Telegram Notifications
         if: always()
         continue-on-error: true
@@ -160,6 +177,7 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT: ${{ secrets.TELEGRAM_CHAT }}
           
+      # Сохранение HTML-отчета Allure как артефакт сборки
       - name: Upload Allure HTML report
         uses: actions/upload-artifact@v4
         if: always()
@@ -169,6 +187,7 @@ jobs:
           path: allure-report
           retention-days: 30
           
+      # Публикация Allure-отчета на GitHub Pages
       - name: Deploy report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: always()
