commit to test-branch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": " npx playwright test",
     "ui": "npx playwright test --ui",
-    "codegen": "npx playwright codegen https://aurora-dev.dev.tedo.ru"
+    "codegen": "npx playwright codegen https://aurora-dev.dev.tedo.ru",
+    "app": "npx playwright test .runner/test-result.js --headed"
   },
   "repository": {
     "type": "git",
